crates/core-metastore/src/snapshots/core_metastore__metastore__tests__update_volume.snap
---
source: crates/metastore/src/metastore.rs
expression: "(rwo1, rwo2)"
---
(
    RwObject {
        data: Volume {
            ident: "test",
            volume: Memory,
        },
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
    RwObject {
        data: Volume {
            ident: "test",
            volume: File(
                FileVolume {
                    path: "/tmp",
                },
            ),
        },
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
)
